--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#938C8C</color>
     <color name="red">#F32C2C</color>
-
-
+    <color name="yelloy">#EADA4C</color>
+    <color name="bla">#424242</color>
 </resources>
