--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -46,109 +46,19 @@
                 android:id="@+id/et_phone"/>
         </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
+        <com.fraggjkee.smsconfirmationview.SmsConfirmationView
             android:visibility="gone"
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="30dp"
-            android:orientation="horizontal"
-            android:padding="20dp"
+            app:scv_symbolTextColor="@color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/sms_code_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/animationView">
-
-            <EditText
-                android:layout_margin="1dp"
-                android:background="@drawable/edittext_bg"
-                android:textColor="@color/black"
-                android:gravity="center"
-                android:maxLength="1"
-                android:maxLines="1"
-                android:imeOptions="actionNext"
-                android:importantForAutofill="no"
-                tools:ignore="LabelFor"
-                android:id="@+id/one"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:inputType="number" />
-
-            <EditText
-                android:layout_margin="1dp"
-                android:background="@drawable/edittext_bg"
-                android:textColor="@color/black"
-                android:gravity="center"
-                android:maxLength="1"
-                android:maxLines="1"
-                android:imeOptions="actionNext"
-                android:importantForAutofill="no"
-                android:id="@+id/two"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:inputType="number" />
-
-            <EditText
-                android:layout_margin="1dp"
-                android:background="@drawable/edittext_bg"
-                android:textColor="@color/black"
-                android:gravity="center"
-                android:maxLength="1"
-                android:maxLines="1"
-                android:imeOptions="actionNext"
-                android:importantForAutofill="no"
-                android:id="@+id/three"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:inputType="number" />
-
-            <EditText
-                android:gravity="center"
-                android:layout_margin="1dp"
-                android:background="@drawable/edittext_bg"
-                android:textColor="@color/black"
-                android:id="@+id/four"
-                android:maxLength="1"
-                android:maxLines="1"
-                android:imeOptions="actionNext"
-                android:importantForAutofill="no"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:inputType="number" />
-
-            <EditText
-
-                android:layout_margin="1dp"
-                android:background="@drawable/edittext_bg"
-                android:textColor="@color/black"
-                android:gravity="center"
-                android:maxLength="1"
-                android:maxLines="1"
-                android:imeOptions="actionNext"
-                android:importantForAutofill="no"
-                android:id="@+id/five"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:inputType="number" />
-
-            <EditText
-                android:layout_margin="1dp"
-                android:background="@drawable/edittext_bg"
-                android:textColor="@color/black"
-                android:gravity="center"
-                android:maxLength="1"
-                android:maxLines="1"
-                android:imeOptions="actionNext"
-                android:importantForAutofill="no"
-                android:id="@+id/six"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:inputType="number" />
-        </LinearLayout>
+            app:scv_codeLength="6"
+            app:scv_symbolBorderColor="@color/main_color"
+            app:scv_symbolBorderCornerRadius="5dp"
+            app:layout_constraintTop_toBottomOf="@id/animationView"
+            />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_send"
@@ -171,7 +81,7 @@
             android:id="@+id/btn_confirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/linearLayout"
+            app:layout_constraintTop_toBottomOf="@id/sms_code_view"
             app:layout_constraintStart_toStartOf="@id/auth_container"
             app:layout_constraintEnd_toEndOf="@id/auth_container"
             android:layout_marginTop="16dp"
